--- a/themes/hugo-bootstrap/i18n/en.yaml
+++ b/themes/hugo-bootstrap/i18n/en.yaml
@@ -26,4 +26,4 @@
   translation: "EN/中"
 
 - id: thanks
-  translation: "Powered by {{.Hugo}}, Theme by {{.Xzya}}. Hosted on Google Firebase."
+  translation: "Powered by {{.Hugo}}, Theme by {{.Xzya}}. ❤ Hosted on Google Firebase."
