--- a/themes/hugo-bootstrap/i18n/zh.yaml
+++ b/themes/hugo-bootstrap/i18n/zh.yaml
@@ -26,4 +26,4 @@
   translation: "EN/中"
 
 - id: thanks
-  translation: "Hugo template made with ❤ by {{.Xzya}}, inspired by {{.HugoThemeBootstrap4Blog}}"
+  translation: "Powered by {{.Hugo}}, Theme by {{.Xzya}}. ❤ Hosted on Google Firebase."
